--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ title: michaelgy repository
 description: Useful information sometimes with code
 github.repository_url: https://github.com/michaelgy/michaelgy.github.io
 theme: jekyll-theme-slate
+url: https://michaelgy.github.io/
 plugins:
   - jekyll-relative-links
 relative_links:
