--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.0.1",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/solid-js": "^5.0.1",
@@ -22,6 +21,7 @@
     "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "d3": "^7.9.0",
+    "firebase": "^11.2.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.14",
     "mdast-util-to-string": "^4.0.0",
